--- a/index.html
+++ b/index.html
@@ -1,20 +1,83 @@
-<!--
-    Document type: loai du lieu
-    => bao cho trinh duyrt bt day la 1 file html-->
 <!DOCTYPE html>
-<!-- 
-      the html con dc goi la the root ( the goc, root element) 
-      thuoc tinh lang ( language) khai bao cho trinh duyet bt website su dung nn nao
--->
-<html lang="vi">
+<html lang="en">
   <head>
-    <!-- 
-      the head se chua cac the meta, title,.. muc dich de khai bao cac thong tin
-      ban dau cua website cho trinh duyet de hien thi dung
-      Mot noi dung trong the head k dc xh o ngoai giao dien
-  -->
-    <title>Day la web cua toi</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Buổi 3</title>
   </head>
+  <body>
+    <!-- 
+       Thẻ span: thuộc nhóm inline element
+       ( trên cùng 1 dòng)
+        k thuộc nhóm semantic element
+    -->
+    <!-- <span>hello</span> 
+    <span>world</span>
+    <span>2026</span> -->
 
-  <body></body>
+    <!-- <p>hello</p>
+    <p>world</p>
+    <p>2026</p> -->
+
+    <!-- Emmet: span*3 -->
+
+    <!-- 
+        Thẻ danh sách có thứ tự
+        ol: ordered list  
+        li: list item
+    -->
+    <!-- <h2>Danh sách việc vợ dặn phải làm:</h2>
+    <ol type="i">
+      <li>Đi chợ</li>
+      <li>Đưa con đi học</li>
+      <li>Giặt đồ</li>
+      <li>Nấu cơm</li>
+      <li>Nấu món mặn</li>
+      <li>Nấu canh</li>
+      <li>Phơi đồ</li>
+    </ol> -->
+
+    <!-- Emmet: ol>li*5 ( tức là tạo ra 5 thẻ li là con ol )-->
+
+    <!--
+        Thẻ danh sách k có thứ tự  
+        ul: unordered list
+    -->
+
+    <!-- <h2>Các vc cần lm trong năm 2026</h2>
+    <ul>
+      <li>Ngủ trc 23h</li>
+      <li>Tăng 5kg</li>
+      <li>Học thêm 1 nn lớp</li>
+    </ul> -->
+
+    <!-- menu : thanh điều hướng = navigation bar -->
+
+    <!-- 
+        Thẻ liên kết ( anchor) (1 đường link khi click vào thì qua trang khác)
+        href: hypertext reference
+    -->
+
+    <a href="https://google.com" target="_blank">Truy cập google.com</a>
+
+    <!-- 
+        Thẻ hình ảnh ( img ) 
+        src: source - nguồn hình ảnh
+        alt: alternative text - văn bản tahy thế
+    -->
+
+    <!-- <img
+      src="https://i.pinimg.com/736x/6d/7f/6d/6d7f6d16d3dd35f0eee515bacd8e4.jpg"
+      alt="Công an hướng dẫn người dân đăng nhập hệ thống dữ liệu quốc gia
+       thông qua VNeID tại Công an phường Sài Gòn (TP.HCM) - Ảnh: THANH HIỆP"
+      width="50%"
+    /> -->
+
+    <p>
+      Lorem ipsum dolor sit amet, <br />
+      consectetur adipisicing elit. Quae quod aut consequuntur ex perferendis
+      ducimus nihil odit qui facere quaerat ab totam, iure maxime sunt quas.
+      Veniam laborum non asperiores.
+    </p>
+  </body>
 </html>
