--- a/index.html
+++ b/index.html
@@ -1,83 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buổi 3</title>
+    <title>Buổi 4</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+
+    <!-- Cách 3: external css 
+       đường dẫn tuyệt đối: 
+          ./ : đi đến thư ục hiện hành 
+    -->
+
+    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+    <link rel="stylesheet" href="./css/style.css" />
+    <!-- cách 1: inline css -->
+
+    <!-- giữ phím alt + shift + mũi tên đi xuống -->
+
+    <!-- cách 2: internal css ( vt trong thẻ head)
+       muốn tác động ptử nào phải gọi tên ptu đó 
+    
+    -->
+
+    <!-- <style>
+        p{
+            font-size: 50px;
+            color: blueviolet;
+        }
+    </style> -->
   </head>
   <body>
-    <!-- 
-       Thẻ span: thuộc nhóm inline element
-       ( trên cùng 1 dòng)
-        k thuộc nhóm semantic element
-    -->
-    <!-- <span>hello</span> 
-    <span>world</span>
-    <span>2026</span> -->
+    <!-- <p style="font-size: 50px; color: bisque">Lorem ipsum dolor sit amet.</p>
 
-    <!-- <p>hello</p>
-    <p>world</p>
-    <p>2026</p> -->
+    <p style="font-size: 50px; color: bisque">Lorem ipsum dolor sit amet.</p>
 
-    <!-- Emmet: span*3 -->
+    <p>Lorem ipsum dolor sit amet.</p> -->
 
-    <!-- 
-        Thẻ danh sách có thứ tự
-        ol: ordered list  
-        li: list item
-    -->
-    <!-- <h2>Danh sách việc vợ dặn phải làm:</h2>
-    <ol type="i">
-      <li>Đi chợ</li>
-      <li>Đưa con đi học</li>
-      <li>Giặt đồ</li>
-      <li>Nấu cơm</li>
-      <li>Nấu món mặn</li>
-      <li>Nấu canh</li>
-      <li>Phơi đồ</li>
-    </ol> -->
+    <!-- <p>Đây là ND mặc định</p>
+    <p id="doanvan2">Đây là ND mặc định</p>
+    <p class="doanvan doanvan3">Đây là ND mặc định</p>
+    <p class="doanvan">Đây là ND mặc định</p>
+    <p class="doanvan">Đây là ND mặc định</p> -->
 
-    <!-- Emmet: ol>li*5 ( tức là tạo ra 5 thẻ li là con ol )-->
+    <!-- <a class="btnaddtocart" href="#">Thêm vào giỏ hàng</a> -->
 
-    <!--
-        Thẻ danh sách k có thứ tự  
-        ul: unordered list
-    -->
-
-    <!-- <h2>Các vc cần lm trong năm 2026</h2>
-    <ul>
-      <li>Ngủ trc 23h</li>
-      <li>Tăng 5kg</li>
-      <li>Học thêm 1 nn lớp</li>
-    </ul> -->
-
-    <!-- menu : thanh điều hướng = navigation bar -->
-
-    <!-- 
-        Thẻ liên kết ( anchor) (1 đường link khi click vào thì qua trang khác)
-        href: hypertext reference
-    -->
-
-    <a href="https://google.com" target="_blank">Truy cập google.com</a>
-
-    <!-- 
-        Thẻ hình ảnh ( img ) 
-        src: source - nguồn hình ảnh
-        alt: alternative text - văn bản tahy thế
-    -->
-
-    <!-- <img
-      src="https://i.pinimg.com/736x/6d/7f/6d/6d7f6d16d3dd35f0eee515bacd8e4.jpg"
-      alt="Công an hướng dẫn người dân đăng nhập hệ thống dữ liệu quốc gia
-       thông qua VNeID tại Công an phường Sài Gòn (TP.HCM) - Ảnh: THANH HIỆP"
-      width="50%"
-    /> -->
+    <!-- <a href="https://amazon.com">Truy cập amazon.com</a> -->
 
     <p>
-      Lorem ipsum dolor sit amet, <br />
-      consectetur adipisicing elit. Quae quod aut consequuntur ex perferendis
-      ducimus nihil odit qui facere quaerat ab totam, iure maxime sunt quas.
-      Veniam laborum non asperiores.
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam
+      itaque, perspiciatis ut recusandae repellat tenetur ex animi magnam velit,
+      iste, dolorem quis pariatur corporis! Iure in ea sed! Excepturi, nemo?
+      Sequi laboriosam ullam eos molestiae ab fuga tenetur maiores ex
+      perferendis! Ex iusto, earum eaque eius incidunt harum, porro tempore ut
+      itaque tenetur est unde molestiae, saepe quasi soluta? Esse.
     </p>
   </body>
 </html>
