--- a/index.html
+++ b/index.html
@@ -3,56 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buổi 4</title>
-    <link rel="stylesheet" href="./css/reset.css" />
+    <title>Buổi 5</title>
 
-    <!-- Cách 3: external css 
-       đường dẫn tuyệt đối: 
-          ./ : đi đến thư ục hiện hành 
-    -->
+    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
 
-    <!-- <link rel="stylesheet" href="./css/style.css" /> -->
-    <link rel="stylesheet" href="./css/style.css" />
-    <!-- cách 1: inline css -->
-
-    <!-- giữ phím alt + shift + mũi tên đi xuống -->
-
-    <!-- cách 2: internal css ( vt trong thẻ head)
-       muốn tác động ptử nào phải gọi tên ptu đó 
-    
-    -->
-
+    <!-- Internal css -->
     <!-- <style>
-        p{
-            font-size: 50px;
-            color: blueviolet;
-        }
+      p {
+        color: blue !important;
+      }
     </style> -->
+
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
-    <!-- <p style="font-size: 50px; color: bisque">Lorem ipsum dolor sit amet.</p>
-
-    <p style="font-size: 50px; color: bisque">Lorem ipsum dolor sit amet.</p>
-
-    <p>Lorem ipsum dolor sit amet.</p> -->
-
-    <!-- <p>Đây là ND mặc định</p>
-    <p id="doanvan2">Đây là ND mặc định</p>
-    <p class="doanvan doanvan3">Đây là ND mặc định</p>
-    <p class="doanvan">Đây là ND mặc định</p>
-    <p class="doanvan">Đây là ND mặc định</p> -->
-
-    <!-- <a class="btnaddtocart" href="#">Thêm vào giỏ hàng</a> -->
-
-    <!-- <a href="https://amazon.com">Truy cập amazon.com</a> -->
-
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam
-      itaque, perspiciatis ut recusandae repellat tenetur ex animi magnam velit,
-      iste, dolorem quis pariatur corporis! Iure in ea sed! Excepturi, nemo?
-      Sequi laboriosam ullam eos molestiae ab fuga tenetur maiores ex
-      perferendis! Ex iusto, earum eaque eius incidunt harum, porro tempore ut
-      itaque tenetur est unde molestiae, saepe quasi soluta? Esse.
-    </p>
+    <div>hallo VN</div>
   </body>
 </html>
