--- a/index.html
+++ b/index.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Buổi 5</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
+</head>
 
-    <!-- Internal css -->
-    <!-- <style>
-      p {
-        color: blue !important;
-      }
-    </style> -->
 
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
+<body>
+    
+    <script>
+        // alert("hello js"); 
+        /*
+          alert là 1 built in func of js
+          alert gọi là tên hàm ( func name)
+        () để ám chỉ đây là 1 hàm 
+        "helllo js " truyền vào in func là 1 đối số (agrument)
+        */
+    //    alert(3+6);
+    //    console: màn hình điiều khiển/ cửa sỏ dòng lệnh
+        // console.log("hello")
+        // function tinhtong(a,b) {
+        //     return a + b;
+        // }
+    </script>
+    <h1>Đăng nhập</h1>
+    <p>Username</p>
+    <input type="text" id="txtUsername">
+    <p>Mật khẩu: </p>
+    <input type="password" id="txtPassword">
+    <br>
+    <button class="btnLogin">Đăng nhập</button>
 
-  <body>
-    <div>hallo VN</div>
-  </body>
+
+    <script src="./js/main.js"></script>
+
+</body>
 </html>
